kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autonomous-sdlc-service
  namespace: autonomous-sdlc
spec:
  selector:
    app: autonomous-sdlc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
